--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
-
 html {
     font-family: 'Roboto Mono', monospace;
     font-size: medium;
     background-color: black;
 }
-
 body {
     font-family: 'Roboto Mono', monospace;
-    font-size: medium;
+    font-size: 14px;
 }
-
 h1, h2, h3, h4, h5, h6 {
     margin: 8px 0 8px 0;
     font-family: 'Roboto Mono', monospace;
     font-weight: bold;
 }
+h1 { font-size: x-large }
+h2 { font-size: large; }
