--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 html {
     font-family: 'Roboto Mono', monospace;
     font-size: medium;
@@ -7,6 +8,7 @@ html {
 body {
     font-family: 'Roboto Mono', monospace;
     font-size: 14px;
+    /* background-color: black; */
 }
 h1, h2, h3, h4, h5, h6 {
     margin: 8px 0 8px 0;
